--- a/404.html
+++ b/404.html
@@ -3,13 +3,13 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Page not found - mdBook Quickstart</title>
+        <title>Page not found - Gavesako Projects</title>
         <base href="/">
 
 
         <!-- Custom HTML head -->
 
-        <meta name="description" content="Demo site for mdBook Quickstart repo">
+        <meta name="description" content="Gavesako Projects">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
@@ -139,7 +139,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">mdBook Quickstart</h1>
+                    <h1 class="menu-title">Gavesako Projects</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
