--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>mdBook Quickstart - mdBook Quickstart</title>
+        <title>mdBook Quickstart - Gavesako Projects</title>
 
 
         <!-- Custom HTML head -->
 
-        <meta name="description" content="Demo site for mdBook Quickstart repo">
+        <meta name="description" content="Gavesako Projects">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
@@ -138,7 +138,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">mdBook Quickstart</h1>
+                    <h1 class="menu-title">Gavesako Projects</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
