deploy: 3d0b58be1c52f43794259c818929cf42faff922d

--- a/print.html
+++ b/print.html
@@ -202,6 +202,61 @@ The Restoration and Legacy</li>
 <li>Lasting Impact: Phra Ubali is highly revered in Sri Lanka, where his story is included in the history curriculum [30:26]. He is also credited with advising the King to make the annual Kandy Esala Perahera (Tooth Relic procession) a public event for mass veneration [34:04].</li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="chapter-2"><a class="header" href="#chapter-2">Chapter 2</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><p>== Buddhist monastery design principles (video)</p>
+<ul>
+<li>The design of Wat Panyanantaram is based on Buddhist principles: The video highlights how the architecture of the temple and its living quarters are a direct reflection of the Buddhist principles and minimalist lifestyle taught by Luang Por Panyananda. This approach emphasizes an economical and value-conscious way of life.</li>
+<li>Accommodations reflect the Buddha's minimalist lifestyle: The design of the monk's living spaces is intentionally simple and communal. The video makes a direct comparison to the Buddha's own hut, which was a mere 2 by 2 meters, to illustrate this principle of austerity and simplicity.</li>
+<li>Monks are encouraged to live together: The architectural layout is designed to promote community and mutual care among the monks. The video specifically mentions that monks should not live in isolation, but rather live together to support one another. The design embodies the phrase "alone but not lonely", meaning that while each monk has their own space, they are part of a larger, supportive community.</li>
+<li>Different living quarters for different roles:
+<ul>
+<li>Presenter/Speaker Monks (พระวิทยากร): These monks often work late into the night interacting with laypeople. Their living quarters are designed with semi-private cells separated by angled wooden partitions to offer a degree of privacy while still being part of the communal structure.</li>
+<li>Teacher Monks (พระอาจารย์): These monks need more space for preparing teaching materials. Their quarters are located in a central building with two side wings to accommodate their specific needs.</li>
+<li>General Monks and Novices: These monks live in more open, shared spaces that promote interaction, mutual learning, and a stronger sense of community.</li>
+</ul>
+</li>
+<li>Building layout and shared spaces: The buildings are designed in a U-shape, creating a central area for senior monks and communal activities.</li>
+<li>Library and classroom space: The ground floor of the buildings is used as a library, encouraging monks to read and study as they enter or exit their living quarters. The space under the buildings also functions as a classroom.</li>
+<li>Accommodations for female practitioners: The video also briefly notes that the accommodations for female practitioners (ผู้ปฏิบัติธรรมหญิง) are designed with the same "alone but not lonely" principle, offering various options from single cells to group dormitories.</li>
+<li>Overarching architectural goals: The entire design of the temple and its facilities is a tool to support a way of life that values economy, Dharma, and the cultivation of a strong Sangha community.</li>
+</ul>
+<p>For more information, you can watch the video here: https://m.youtube.com/watch?v=c3pro5i_gGg</p>
+<p>The concept of "Ramaniyasathan" and the design of Buddhist temples in Thailand:</p>
+<p>The video introduces the concept of "Ramaniyasathan", which are pleasant places ideal for monks to live and practice. According to the Pali Canon, these places have three key characteristics:</p>
+<ul>
+<li>Natural surroundings: They are serene, with a pleasant atmosphere, and are often located near a river [00:16].</li>
+<li>Accessibility: They are not too far from human settlements [00:21], emphasizing that monks should not be completely isolated in forests.</li>
+<li>Aesthetics and order: The surroundings are orderly and in harmony with nature [00:38].</li>
+</ul>
+<p>Evolution of Temple Design in Thailand</p>
+<p>The video traces the historical evolution of temple design in Thailand, noting the clear division of a temple into two main zones:</p>
+<ul>
+<li>Early periods: In India, the distinction between the Buddha's residence (Buddhavasa) and the Sangha's residence (Sanghavasa) was less clear. This was also seen in the Dvaravati period in Thailand [01:42].</li>
+<li>Sukhothai and Ayutthaya periods: A clear separation of the Buddhavasa (the area for sacred structures like the main prayer hall) and the Sanghavasa (the living quarters for monks) became prominent [01:47]. Temples during this time typically faced east or a main road, with the Sanghavasa located to the south [01:53].</li>
+<li>The Abbot's Quarters: The abbot's living quarters were strategically located at the boundary between the two zones to allow the abbot to oversee both the sacred and residential areas [03:12].</li>
+</ul>
+<p>Modern Challenges and Adaptations</p>
+<p>The video concludes by discussing how modern temples are facing challenges from new technology and social media [04:22]. It stresses the importance of adapting temple layouts to maintain discipline and support the entire Buddhist community, including monks, nuns, and lay practitioners [05:05]. The ultimate goal of a well-designed temple is to be a spiritual sanctuary for all Buddhists and to ensure the longevity of the Dharma for future generations [06:05].</p>
+<p>For more information, you can watch the video here: https://youtu.be/hNZYrf-Ua-I</p>
+<ul>
+<li>Monks' Original Abodes: In the time of the Buddha, monks primarily lived in forests. This is reflected in the names of many early temples, such as "vanaram," which means "forest temple." The Buddha's advice was for monks to seek quiet places suitable for meditation, like forests or empty houses [00:17].</li>
+<li>Purpose of Temples (Arama): Temples were initially built by laypeople who had faith in the Buddha, such as King Bimbisara, who donated a bamboo grove for this purpose. The earliest constructions were based on the needs of the donors and users, with no strict rules [00:45]. Regardless of the style, the purpose was always practical, not extravagant, to meet the necessary needs of the monks [01:47].</li>
+<li>Construction Styles by Social Status: The type of materials and architectural style used for temples often reflected the social status of the people who built them:
+<ul>
+<li>Royalty: Temples were built in the style of palaces [01:21].</li>
+<li>Wealthy Individuals: The structures resembled mansions or castles [01:26].</li>
+<li>Commoners: Temples were made from readily available materials like earth, bamboo, or wood, similar to their own homes [01:33].</li>
+</ul>
+</li>
+<li>Monks' Core Duties: The video highlights three main duties for monks that they should prioritize over construction and maintenance:
+<ul>
+<li>Ganthadhura: The study, memorization, and teaching of scriptures [02:04].</li>
+<li>Vipassanadhura: The practice of meditation [02:16].</li>
+<li>Dhammaduta: Spreading the Buddhist teachings for the benefit of all beings [02:20].</li>
+</ul>
+</li>
+<li>Symbiotic Relationship with Laypeople: The video emphasizes the mutual support between monks and laypeople. Laypeople provide the four necessities—food, clothing, shelter, and medicine—allowing monks to focus on their spiritual practice and the propagation of the Dharma. In turn, the monks' teachings strengthen the faith of the lay community [04:16].</li>
+</ul>
+<p>For more information, you can watch the video here: https://youtu.be/zvARNSHRAeA</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="foo"><a class="header" href="#foo">Foo</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="fizz"><a class="header" href="#fizz">Fizz</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="buzz"><a class="header" href="#buzz">Buzz</a></h1>
